--- a/config.toml
+++ b/config.toml
@@ -35,4 +35,4 @@ theme = "jeffprod"
 
 [Params.widgets]
   recent_num = 5 # Set the number of articles in the "Recent articles" widget
-  tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
+  tags_counter = true # Enable counter for each tag in "Tags" widget (disabled by default)
