适配最新版hugo20250401

--- a/config.toml
+++ b/config.toml
@@ -14,9 +14,8 @@ ignoreErrors = ["error-disable-taxonomy"]
 defaultContentLanguage = "zh-hans"  # For HTML page, now support: en, zh-hans, zh-hant, ja, nl
 
 summaryLength = 100 # Custom summary length, add <!--more--> in post file to custom split point
-paginate = 10
+pagination.pagerSize = 10
 
-# googleAnalytics = "UA-000000000-0" # Set your Google Analytics UA here
 
 [outputFormats]
   [outputFormats.SearchIndex]
